Busca de usuario PHP e BD

--- a/buscaUsuario.html
+++ b/buscaUsuario.html
@@ -1,6 +1,6 @@
 <?php
-//Primeiros temos que definir o host, banco de dados, usuário e senha
-$host = "localhost";
+//Primeiro temos que definir o host, banco de dados, usuário e senha
+$host = "localhost/phpmyadmin/server_databases.php";
 $sb = "usuarios";
 $user = "root";
 $pass = "";
