--- a/buscaUsuario.html
+++ b/buscaUsuario.html
@@ -1,6 +1,6 @@
 <?php
 //Primeiro temos que definir o host, banco de dados, usuário e senha
-$host = "localhost//phpmyadmin//server_databases.php";
+$host = "localhost";
 $sb = "usuarios";
 $user = "root";
 $pass = "";
